fix screen overflow

--- a/css/style.css
+++ b/css/style.css
@@ -83,13 +83,13 @@ body {
   .databox .count {
     text-align: center; }
   .databox .lable {
-    width: calc(3.75rem * 2);
+    width: calc(3.75rem * 2.2);
     height: 3.75rem;
     display: inline-block;
     position: relative;
     vertical-align: middle;
     line-height: 3.75rem;
-    text-indent: 3.75rem; }
+    text-indent: calc(3.75rem * 1.2); }
     .databox .lable::before {
       content: '';
       position: absolute;
@@ -119,16 +119,20 @@ body {
 
 .container {
   border: 0.28125rem solid #1919A6;
-  position: relative; }
+  position: relative;
+  overflow: hidden;
+  height: calc(100vh - (4.5px + 7px)); }
   .container .innerline {
     border: 0.4375rem solid #2121DE;
-    margin: 0.625rem; }
+    margin: 0.625rem;
+    height: calc(100vh - (4.5px + 7px + 10px)*2); }
 
 .top-left {
   width: 100%;
   background-size: contain;
   background-repeat: no-repeat;
   position: absolute;
+  z-index: -1;
   background-image: url(../asset/Monster_Pink.png);
   height: 4.375rem;
   background-position: top left;
@@ -139,6 +143,7 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
+    z-index: -1;
     background-image: url(../asset/Cherry.png);
     height: 13.75rem;
     background-position: top left;
@@ -150,6 +155,7 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   position: absolute;
+  z-index: -1;
   background-image: url(../asset/Monster_Blue.png);
   height: 4.375rem;
   background-position: top right;
@@ -160,6 +166,7 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
+    z-index: -1;
     background-image: url(../asset/Monster_Orange.png);
     height: 9.375rem;
     background-position: top right;
@@ -171,6 +178,7 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   position: absolute;
+  z-index: -1;
   background-image: url(../asset/PAC-MAN.png);
   height: 12.5rem;
   background-position: bottom left;
@@ -182,6 +190,7 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   position: absolute;
+  z-index: -1;
   background-image: url(../asset/PAC-MAN_Mini.png);
   height: 4.375rem;
   background-position: bottom right;
@@ -192,6 +201,7 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
+    z-index: -1;
     background-image: url(../asset/Monster_Red.png);
     height: 4.375rem;
     background-position: bottom right;
